--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mp?zeroDateTimeBehavior=convertToNull&characterEncoding=utf-8&useUnicode=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/mp?zeroDateTimeBehavior=convertToNull&characterEncoding=utf-8&useUnicode=true
+spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/mp?zeroDateTimeBehavior=convertToNull&characterEncoding=utf-8&useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 logging.level.com.lujieni.mp.dao=debug
+
