--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=root
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 logging.level.com.lujieni.mp.dao=debug
-
+#mybatis-plus.mapper-locations=classpath:/mapper/**Mapper.xml ·Ç±ØÐè!
