--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=root
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 logging.level.com.lujieni.mp.dao=debug
-#mybatis-plus.mapper-locations=classpath:/mapper/**Mapper.xml 非必需!
+#mybatis-plus.mapper-locations=classpath:/mapper/**Mapper.xml
+#指定mybatis-plus扫描的xml文件的路径,不配置也可以,但一旦配置了即不能错!
